# solar42

./: .gitignore  00-LOG.md  01-architecture.md  02-drone-recipe.md  03-engine-gap-analysis.md  04-drone-lab.md  05-native-extension-proposal.md  06-manual-digest.md  07-42n-panel-inventory.md  08-implementation-plan.md  09-calibration-protocol.md  10-release-signing.md  CLAUDE.md  README.md  bounce-example.ts  sources.md
Solar/: about-dinamo-variable-fonts.txt
app/: CMakeLists.txt
app/cmake/: Dependencies.cmake  EmbedPrograms.cmake
app/programs/cathedral/: 1-shimmer.spn  2-octdelay.spn  3-space.spn
app/programs/ochre/: 1-reverse-long.spn  2-reverse-short.spn  3-reverse-loop.spn
app/programs/time/: 1-delayverb.spn  2-delaychorus.spn  3-delayvibrato.spn
app/programs/vibrotrem/: 1-tremolo.spn  2-vibrato.spn  3-chorus.spn
app/scripts/: check.sh  panel-shot.sh
app/src/dsp/: BlepKernel.h  Dsp.cpp  EnvFollower.h  MorphLfo.h  NoiseGen.h  PhotoSensor.h  PolivoksFilter.h  PolyBlepOsc.h  PolyphaseResampler.h  RcEnvelope.h  SampleHold.h  SchmittOsc.h  SimpleSvf.h  Smoother.h  Tolerances.h  TriCoreVco.h  TuningConstants.h  Volts.h  Waveshaper.h
app/src/engine/: CommandQueue.h  Jacks.h  MidiCcMap.h  MidiClockSource.h  Rack.cpp  Rack.h  SeqlockBox.h  Telemetry.h  VoltBus.h
app/src/engine/keyboard/: Arpeggiator.h  KbClock.h  KbConfig.h  KbMenu.cpp  KbMenu.h  KbSequencer.h  MidiPerformer.h  PressureShaper.h  Quantiser.h  TouchKeyboard.cpp  TouchKeyboard.h
app/src/engine/modules/: ClassicDroneVoice.cpp  ClassicDroneVoice.h  Effector.h  EnvelopeModule.h  Mixer.h  ModStrip.h  PapaSrapaVoice.cpp  PapaSrapaVoice.h  VcoVoice.cpp  VcoVoice.h
app/src/fv1/: CartridgeLibrary.cpp  CartridgeLibrary.h  Fv1Opcodes.h  Fv1Vm.cpp  Fv1Vm.h  SpinAsm.cpp  SpinAsm.h
app/src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
app/src/state/: FactoryPresets.h  KeyboardState.h  PatchBay.h  PresetManager.h
app/src/ui/: CableLayer.h  KeyboardSection.h  PanelLayout.h  PanelSections.h  PanelView.h  PatchMatrixDebug.h  PresetBar.h  SettingsDrawer.h  SolarLookAndFeel.h  Tooltips.h
app/tests/: TestDroneVoice.cpp  TestDsp.cpp  TestFv1.cpp  TestKeyboard.cpp  TestM3Voices.cpp  TestM5Panel.cpp  TestMidiCcMap.cpp  TestMidiClock.cpp  TestMidiPerformer.cpp  TestPolivoks.cpp  TestRouting.cpp  TestRtSafety.cpp  TestSanity.cpp  TestUtil.h
app/tests/fixtures/: an0001-1-chorus.hex  an0001-1-chorus.spn  an0001-2-lfowave.hex  an0001-2-lfowave.spn  an0001-3-pitchup.hex  an0001-3-pitchup.spn  an0001-4-pitchpot.hex  an0001-4-pitchpot.spn  regen-goldens.sh
app/tools/calib/: Main.cpp
app/tools/fv1asm/: Main.cpp
app/tools/render/: Main.cpp
app/tools/statecheck/: Main.cpp
drone-lab/: index.html
patches/: solar42-drone.instrument.json
reference-docs/: solar42-manual.txt  solar42f-manual.txt  solar42n-manual.txt
